--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "clsx": "^2.1.1",
     "linkify-react": "^4.3.2",
     "lucide-react": "^0.539.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "use-local-storage-state": "^19.5.0"
